estilizando celdas para validacion

--- a/prepros.config
+++ b/prepros.config
@@ -912,6 +912,19 @@
         }
       }
     },
-    "files": []
+    "files": [
+      {
+        "file": "css/style-dist.css",
+        "config": {
+          "autoCompile": true
+        }
+      },
+      {
+        "file": "css/style.css",
+        "config": {
+          "autoCompile": true
+        }
+      }
+    ]
   }
 }
